adds an example of Continuation