@@ -36,13 +36,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>19</release>
                     <source>19</source>
                     <target>19</target>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
-                        <arg>--add-modules</arg>
-                        <arg>jdk.incubator.concurrent</arg>
+                        <arg>--add-modules=jdk.incubator.concurrent</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.vm=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
